# Arbiter

./: .gitattributes  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Doxyfile  LICENSE  README.md
lib/libarbiter/: CMakeLists.txt  game.h  helloworld.h  player.cc  player.h  player_list.cc  player_list.h  swiss_pair_table.h  swiss_pairer.h  util.h
test/libarbiter/: CMakeLists.txt  game_test.cc  helloworld_test.inc  player_list_test.cc  player_list_test.csv  player_list_test.inc  player_list_test.json  player_test.cc  player_test.inc  swiss_pair_table_test.cc  test_main.cc
